--- a/Testcor.vcxproj
+++ b/Testcor.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Environment.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Visualisation.cpp" />
     <ClCompile Include="World.cpp" />
@@ -152,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="Command.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="Environment.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Visualisation.h" />
     <ClInclude Include="World.h" />
