--- a/Testcor.vcxproj.filters
+++ b/Testcor.vcxproj.filters
@@ -33,12 +33,12 @@
     <ClCompile Include="Environment.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Settings.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Command.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="World.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Visualisation.h">
@@ -52,6 +52,12 @@
     </ClInclude>
     <ClInclude Include="Environment.h">
       <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="World.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="Settings.h">
+      <Filter>Исходные файлы</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
