--- a/Testcor.vcxproj
+++ b/Testcor.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Environment.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Settings.cpp" />
     <ClCompile Include="Visualisation.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
@@ -155,6 +156,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Environment.h" />
     <ClInclude Include="Matrix.h" />
+    <ClInclude Include="Settings.h" />
     <ClInclude Include="Visualisation.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
