--- a/Testcor.vcxproj.filters
+++ b/Testcor.vcxproj.filters
@@ -38,9 +38,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Command.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="Visualisation.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
@@ -57,6 +54,15 @@
       <Filter>Исходные файлы</Filter>
     </ClInclude>
     <ClInclude Include="Settings.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageLoader.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Timer.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Command.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
   </ItemGroup>
