--- a/Testcor.vcxproj
+++ b/Testcor.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="Environment.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Settings.cpp" />
+    <ClCompile Include="Statistics.cpp" />
     <ClCompile Include="Visualisation.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
@@ -158,6 +159,7 @@
     <ClInclude Include="ImageLoader.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Settings.h" />
+    <ClInclude Include="Statistics.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Visualisation.h" />
     <ClInclude Include="World.h" />
